apps/home/wyze-bridge/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wyze-bridge
  namespace: wyze-bridge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wyze-bridge
  template:
    metadata:
      labels:
        app: wyze-bridge
    spec:
      containers:
      - name: wyze-bridge
        image: ghcr.io/mrlt8/docker-wyze-bridge:edge@sha256:ada1d59fd745beb84747f7f2f086323cc50b9b72a0abc0075c808028b7b936fa
        ports:
        - containerPort: 1935
        - containerPort: 8554
        - containerPort: 8888
        - containerPort: 8889
        - containerPort: 8189
        - containerPort: 5000
