apps/home/wyze-bridge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wyze-bridge
  namespace: wyze-bridge

spec:
  annotations:
          io.cilium/lb-ipam-ips: "192.168.10.46"
  selector:
    app: wyze-bridge
  ports:
  - name: rtmp
    port: 1935
    targetPort: 1935
  - name: rtsp
    port: 8554
    targetPort: 8554
  - name: hls
    port: 8888
    targetPort: 8888
  - name: webrtc
    port: 8889
    targetPort: 8889
  - name: webrtc-ice
    port: 8189
    protocol: UDP
    targetPort: 8189
  - name: web-ui
    port: 5000
    targetPort: 5000
  type: ClusterIP
