apps/home/wyze-bridge/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wyze-bridge
  namespace: wyze-bridge
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - "wyze-bridge.vanillax.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: wyze-bridge
          port: 5000
